# Mobile-Money-Trends-Project

./: README.md  Read_API_Data.ipynb  api.py  dashboard.html  dashboard.py  main.py  pyproject.toml  run_analysis.py
.github/workflows/: ci.yml
data/: README.md
docs/: index.md
mobile_money_project/: __init__.py  analysis.py  data.py  etl.py  modeling.py  preprocessing.py
models/: health_report.json  mobile_money_model.metadata.json  mobile_money_model.pkl
notebooks/: exploratory_analysis.ipynb  mobile_money_trends.ipynb
notebooks/data/: sample_mobile_money_data.csv
results/: backtest_results.csv  mobile_money_forecast.csv
tests/: test_etl.py  test_modeling.py
