[project]
name = "tryouts"
version = "0.1.0"
description = "Mobile money adoption trend analysis and forecasting project."
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "numpy>=2.0.0",
    "pandas>=3.0.2",
    "scikit-learn>=1.4.0",
    "matplotlib>=3.9.0",
    "seaborn>=0.13.0",
    "requests>=2.33.1",
]
