[project]
name = "tryouts"
version = "0.1.0"
description = "Mobile money adoption trend analysis and forecasting project."
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "numpy>=2.0.0",
    "pandas>=3.0.2",
    "scikit-learn>=1.4.0",
    "matplotlib>=3.9.0",
    "seaborn>=0.13.0",
    "requests>=2.33.1",
    "pytest>=7.0.0",
    "fastapi>=0.100.0",
    "uvicorn>=0.20.0",
    "schedule>=1.2.0",
    "shap>=0.42.0",
    "optuna>=3.0.0",
]

[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
py-modules = ["api", "dashboard", "run_analysis"]
packages = ["mobile_money_project"]
include-package-data = false
